<resources>
    <string name="app_name">Survey</string>
    <string name="hello">World!</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="MainPage_Button1">Create New Form</string>
    <string name="MainPage_Button2">Existing Form</string>
    <string name="enter_details_for_your_form">Enter Details for Your Form</string>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Radio_button">Radio Button</string>
    <string name="Text_box">Text Box</string>
    <string name="Multi_line">Multi Line Text Box</string>
    <string name="Check_box">Check Box</string>

    <string name="report">SurveyReport</string>
    <string name="download">Download</string>
    <string name="settings">Settings</string>
    <string name="help">help</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="feedback">SendFeedback</string>
    <string name="exit">Exit</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="edit">Edit</string>
    <string name="nav_communicate">Communicate</string>


</resources>
