<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ExistingForm"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearlayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="25sp"
                    android:id="@+id/name_existing_form"
                    android:text="title"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:maxLines="3"
                    android:text="default"
                    android:textSize="15sp"
                    android:id="@+id/description_existing_form"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/horizontal_line"/>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/parent_layout_existing"/>
            </ScrollView>

        </LinearLayout>



        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:fab_addButtonColorNormal="@color/colorAccent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:id="@+id/float_existing_add_layout"
            app:fab_addButtonPlusIconColor="@color/black"
            app:fab_labelStyle="@string/app_name"

            >

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_radio_button_24dp"
                app:fab_colorNormal="#00C2FF"
                app:fab_colorPressed="@color/royal_blue"
                android:id="@+id/float_existing_radio"
                app:fab_title="@string/Radio_button"

                />
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_box_black_24dp"
                app:fab_colorNormal="#00C2FF"
                android:id="@+id/float_existing_check"
                app:fab_title="@string/Check_box"
                />
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_multi_24dp"
                app:fab_colorNormal="#00C2FF"
                android:id="@+id/float_existing_multi"
                app:fab_title="@string/Multi_line"
                />
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit_text_black_24dp"
                app:fab_colorNormal="#00C2FF"
                android:id="@+id/float_existing_edit_text"
                app:fab_title="@string/Text_box"
                />


        </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>